--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.0.2
   path: ^1.8.0
   provider: ^6.0.2
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
   flutter_test:
